Updating Google Earth UI and Images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ i:hover{
 .colourDiv{
   height:300px;
   width:300px;
-  border-radius: 25px
+  border-radius: 25px;
+  margin-bottom: 10px;
 }
 
 </style>
@@ -87,7 +88,7 @@ i:hover{
                 <div id="pantoneColoursTab" class="tab-pane fade">
                     <div>
                         <p style="color:white; margin-bottom: 10px">1.</p>
-                        <div class="colourDiv" style="background-color:#CC6666; margin-bottom:10px; border-radius: 25px"></div>
+                        <div class="colourDiv" style="background-color:#CC6666;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="" >Mahogany</option>
@@ -98,7 +99,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">2.</p>
-                        <div class="colourDiv" style="background-color:#9F8170; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#9F8170;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="correct" >Beaver</option>
@@ -109,7 +110,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">3.</p>
-                        <div class="colourDiv" style="background-color:#F0E891; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#F0E891;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="" >Banana Mania</option>
@@ -120,7 +121,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">4.</p>
-                        <div class="colourDiv" style="background-color:#A8E4A0; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#A8E4A0;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="correct" >Granny Smith Apple</option>
@@ -131,7 +132,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">5.</p>
-                        <div class="colourDiv" style="background-color:#1CAC78; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#1CAC78;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="" >Forest Green</option>
@@ -142,7 +143,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">6.</p>
-                        <div class="colourDiv" style="background-color:#199EBD; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#199EBD;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="correct" >Blue Green</option>
@@ -153,7 +154,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">7.</p>
-                        <div class="colourDiv" style="background-color:#A2ADD0; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#A2ADD0;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="correct" >Wild Blue Yonder</option>
@@ -164,7 +165,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">8.</p>
-                        <div class="colourDiv" style="background-color:#926EAE; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#926EAE;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width:300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="" >Wisteria</option>
@@ -175,7 +176,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">9.</p>
-                        <div class="colourDiv" style="background-color:#FF1DCE; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#FF1DCE;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="" >Purple Pizzazz</option>
@@ -186,7 +187,7 @@ i:hover{
 
                     <div>
                         <p style="color:white; margin-bottom: 10px">10.</p>
-                        <div class="colourDiv" style="background-color:#FC6C85; margin-bottom: 10px"></div>
+                        <div class="colourDiv" style="background-color:#FC6C85;"></div>
                         <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Colour</option>
                             <option value="" >Mauvelous</option>
@@ -201,10 +202,201 @@ i:hover{
                 </div>
 
                 <div id="googleEarthTab" class="tab-pane fade">
-                    <div style="width:350px;">
-                        <button id="randomUtility" disabled class="btn btn-success" style="background-color: #32CC6E; font-family: 'Montserrat';font-size: 15px">Random Utility</button>
-                        <i id="randomUtilityInfo" style="position:relative; color:white; float:right" class="fa fa-info"></i>
+                   <div>
+                        <p style="color:white; margin-bottom: 10px">1.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/Big Ben.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
                     </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/London Eye.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/Eiffel Tower.jpeg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/Tyne Bridge.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/New York.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/Capetown2.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/POM.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/Mitre Peak.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+
+                    <div>
+                        <p style="color:white; margin-bottom: 10px">2.</p>
+                          <img class="colourDiv" src="Images/GoogleEarth/Le Morne.jpg" alt="">
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>Location</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                        <div>
+                        <select class="js-example-basic-single" name="state" id="jobList" style="width: 300px; height:35px; margin-bottom: 15px">
+                            <option value="" disabled selected>BP - Looking At/From</option>
+                            <option value="correct" >Granny Smith Apple</option>
+                            <option value="" >Inch Worm</option>
+                            <option value="" >Asparagus</option>
+                        </select>
+                        </div>
+                    </div>
+
+
+
+
+                    
+                    <button id="randomUtility" class="btn btn-success" style="background-color: #32CC6E; font-family: 'Montserrat';font-size: 15px; margin-top: 20px">Submit Answers</button>
                 </div>
 
 
