Reduced Size of All Images

--- a/index.html
+++ b/index.html
@@ -360,6 +360,8 @@ i:hover{
                         </select>
                         </div>
                     </div>
+
+                    <button id="randomUtility" class="btn btn-success" style="background-color: #32CC6E; font-family: 'Montserrat';font-size: 15px; margin-top: 20px">Submit Answers</button>
                     
                 </div>
 
