Fixed bug where Round 3, Question 8 was incorrectly showing as incorrect

--- a/index.html
+++ b/index.html
@@ -646,17 +646,17 @@ i:hover{
                         <div>
                         <select id="aerialCitiesSelect8" class="js-example-basic-single" name="state" style="width: 300px; height:35px; margin-bottom: 15px">
                             <option value="" disabled selected>Location</option>
-                            <option value="" >Cape Town, SA</option>
-                            <option value="" >Cardiff, Wales</option>
-                            <option value="" >Le Morne, Mauritius</option>
-                            <option value="" >London, UK</option>
-                            <option value="" >Melbourne, Australia</option>
-                            <option value="" >Milford Sound, NZ</option>
-                            <option value="" >Newcastle, UK</option>
-                            <option value="" >New York City, USA</option>
-                            <option value="" >Paris, France</option>
-                            <option value="" >Port Moresby, PNG</option>
-                            <option value="" >Sydney, Australia</option>
+                            <option value="Cape Town, SA" >Cape Town, SA</option>
+                            <option value="Cardiff, Wales" >Cardiff, Wales</option>
+                            <option value="Le Morne, Mauritius" >Le Morne, Mauritius</option>
+                            <option value="London, UK" >London, UK</option>
+                            <option value="Melbourne, Australia" >Melbourne, Australia</option>
+                            <option value="Milford Sound, NZ" >Milford Sound, NZ</option>
+                            <option value="Newcastle, UK" >Newcastle, UK</option>
+                            <option value="New York City, USA" >New York City, USA</option>
+                            <option value="Paris, France" >Paris, France</option>
+                            <option value="Port Moresby, PNG" >Port Moresby, PNG</option>
+                            <option value="Sydney, Australia" >Sydney, Australia</option>
                         </select>
                         </div>
                     </div>
